--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Hunter
+author: Hong
+email: 123@456.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  澳门首家线上赌博上线了，性感荷官，在线发牌
 
 # social links
 twitter_username: your-twitter-handle
@@ -12,4 +10,4 @@ github_username:  your-github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-hacker
+theme: minima
